Afgerond - Fase 12 — Meer (Aggregator)

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -217,6 +217,7 @@
   "settings.help.contact.subtitle": "Unser Support-Team hilft gerne.",
   "settings.help.contact.cta": "Support kontaktieren",
   "common.back": "Zurück",
+  "common.close": "Schließen",
   "validation.required": "Dieses Feld ist erforderlich.",
   "validation.maxLength": "Der Text ist zu lang. Bitte kürzen.",
   "home.module.notes.title": "Schnelle Notizen",
@@ -265,6 +266,44 @@
   "nav.home": "Start",
   "nav.notifications": "Benachrichtigungen",
   "nav.settings": "Einstellungen",
+  "more.title": "Mehr",
+  "more.subtitle": "Alle wichtigen Infos zu Fit4Seniors an einem Ort.",
+  "more.items.profile.title": "Profil",
+  "more.items.profile.subtitle": "Daten ansehen und bearbeiten",
+  "more.items.help.title": "Hilfe & Informationen",
+  "more.items.help.subtitle": "Schnelle Antworten und Orientierung",
+  "more.items.privacy.title": "Datenschutz",
+  "more.items.privacy.subtitle": "So schützen wir deine Daten",
+  "more.items.safety.title": "Sicherheit & Hinweise",
+  "more.items.safety.subtitle": "Sicher und selbstbewusst trainieren",
+  "more.items.about.title": "Über Fit4Seniors",
+  "more.items.about.subtitle": "Mission, Team und Hintergrund",
+  "more.info.eyebrow": "Info",
+  "more.info.help.title": "Hilfe & Informationen",
+  "more.info.help.lead": "Hier findest du das Wichtigste für einen schnellen Überblick. Bewahre diesen Bereich, wenn du eine kurze Orientierung brauchst.",
+  "more.info.help.sectionTitle": "Erste Schritte",
+  "more.info.help.point1": "Öffne Heute, um den Plan zu sehen, und folge den Karten Schritt für Schritt.",
+  "more.info.help.point2": "Tippe im Header auf die Glocke, um über Erinnerungen und Updates informiert zu bleiben.",
+  "more.info.help.point3": "Brauchst du mehr Unterstützung? Über das Einstellungs-Icon erreichst du den Support, ohne die Seite zu verlassen.",
+  "more.info.privacy.title": "Datenschutz",
+  "more.info.privacy.lead": "Wir halten Daten schlank und verständlich, damit du die Kontrolle behältst. Persönliche Angaben dienen nur deiner Erfahrung.",
+  "more.info.privacy.sectionTitle": "So gehen wir mit Daten um",
+  "more.info.privacy.point1": "Profildaten wie Name und Präferenzen bleiben an deinem Konto, um Inhalte zu personalisieren.",
+  "more.info.privacy.point2": "Wir verkaufen deine Informationen nicht. Daten werden nur genutzt, um Fit4Seniors zu verbessern.",
+  "more.info.privacy.point3": "Du kannst jederzeit Export oder Anpassungen anfragen – über das Einstellungs-Icon im Header.",
+  "more.info.safety.title": "Sicherheit & Hinweise",
+  "more.info.safety.lead": "Training soll sich sicher anfühlen. Nutze diese Kurz-Checks vor dem Start und wenn du pausierst.",
+  "more.info.safety.sectionTitle": "Vor dem Start",
+  "more.info.safety.point1": "Schaffe Platz um dich, trage feste Schuhe und halte Wasser bereit.",
+  "more.info.safety.point2": "Starte langsam. Stoppe sofort bei Schmerz, Schwindel oder Atemnot.",
+  "more.info.safety.point3": "Halte ein Telefon griffbereit und trainiere nach Möglichkeit in Nähe einer stabilen Stütze.",
+  "more.info.about.title": "Über Fit4Seniors",
+  "more.info.about.lead": "Fit4Seniors entsteht mit Therapeut:innen und Coaches, damit Bewegung einfach, motivierend und sicher bleibt.",
+  "more.info.about.sectionTitle": "Was uns antreibt",
+  "more.info.about.point1": "Klare Anleitungen, gut lesbare Layouts und ruhiges Tempo, damit du dich auf Bewegung konzentrieren kannst.",
+  "more.info.about.point2": "Programme sind für Senior:innen gedacht – ohne komplizierte Steuerung, mit praktischen Schritten.",
+  "more.info.about.point3": "Wir verbessern kontinuierlich mit deinem Feedback, um die Erfahrung vertrauenswürdig und unterstützend zu halten.",
+  "more.info.close": "Schließen",
   "brain.title": "Gehirntraining",
   "brain.header.title": "Gehirntraining",
   "brain.overview.title": "Fokussierte Übungen",
