--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -217,6 +217,7 @@
   "settings.help.contact.subtitle": "Our support team is ready to help.",
   "settings.help.contact.cta": "Contact support",
   "common.back": "Back",
+  "common.close": "Close",
   "validation.required": "This field is required.",
   "validation.maxLength": "The text is too long. Please shorten it.",
   "home.module.notes.title": "Quick Notes",
@@ -265,6 +266,44 @@
   "nav.home": "Home",
   "nav.notifications": "Notifications",
   "nav.settings": "Settings",
+  "more.title": "More",
+  "more.subtitle": "All important info about Fit4Seniors in one place.",
+  "more.items.profile.title": "Profile",
+  "more.items.profile.subtitle": "View and edit your details",
+  "more.items.help.title": "Help & Information",
+  "more.items.help.subtitle": "Quick answers and guidance",
+  "more.items.privacy.title": "Privacy",
+  "more.items.privacy.subtitle": "How we protect your data",
+  "more.items.safety.title": "Safety & Tips",
+  "more.items.safety.subtitle": "Train safely and confidently",
+  "more.items.about.title": "About Fit4Seniors",
+  "more.items.about.subtitle": "Mission, team, and background",
+  "more.info.eyebrow": "Info",
+  "more.info.help.title": "Help & Information",
+  "more.info.help.lead": "Here you can find the essentials to get oriented quickly. Save this area for when you need reassurance or a quick recap.",
+  "more.info.help.sectionTitle": "Getting started",
+  "more.info.help.point1": "Open Today to see what is planned and follow the cards step by step.",
+  "more.info.help.point2": "Tap the bell icon in the header to stay informed about reminders and updates.",
+  "more.info.help.point3": "Need more assistance? Use the settings icon to reach support without leaving your current page.",
+  "more.info.privacy.title": "Privacy",
+  "more.info.privacy.lead": "We keep data lean and readable so you stay in control. Your personal details are only used to tailor your experience.",
+  "more.info.privacy.sectionTitle": "How we handle data",
+  "more.info.privacy.point1": "Profile data such as your name and preferences stay tied to your account for personalization.",
+  "more.info.privacy.point2": "We do not sell your information. Data is only used to improve Fit4Seniors and deliver your features.",
+  "more.info.privacy.point3": "You can request exports or changes anytime by contacting support from the header settings icon.",
+  "more.info.safety.title": "Safety & Tips",
+  "more.info.safety.lead": "Training should always feel safe. Use these quick checks before you start and whenever you need a pause.",
+  "more.info.safety.sectionTitle": "Before you start",
+  "more.info.safety.point1": "Create space around you, wear stable shoes, and keep water nearby.",
+  "more.info.safety.point2": "Move slowly at first. Stop immediately if you feel pain, dizziness, or shortness of breath.",
+  "more.info.safety.point3": "Keep a phone within reach and train near stable support when possible.",
+  "more.info.about.title": "About Fit4Seniors",
+  "more.info.about.lead": "Fit4Seniors is built with therapists and coaches to keep movement simple, motivating, and safe.",
+  "more.info.about.sectionTitle": "What drives us",
+  "more.info.about.point1": "Clear guidance, readable layouts, and calm pacing so you can focus on movement.",
+  "more.info.about.point2": "Programs are designed with seniors in mind—no complex controls, just practical steps.",
+  "more.info.about.point3": "We continuously improve with your feedback to keep the experience trustworthy and supportive.",
+  "more.info.close": "Close",
   "brain.title": "Brain training",
   "brain.header.title": "Brain training",
   "brain.overview.title": "Dedicated sessions",
