Afgerond - Welkomstbericht home pagina past zich nu aan aan ochtend, middag en avond

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -7,6 +7,9 @@
   "home.title": "Fit4Seniors",
   "home.description": "Startseite von Fit4Seniors.",
   "home.greeting": "Guten Morgen{{name}}",
+  "home.greeting.morning": "Guten Morgen{{name}}",
+  "home.greeting.afternoon": "Guten Tag{{name}}",
+  "home.greeting.evening": "Guten Abend{{name}}",
   "home.subtext": "Bereit, heute aktiv zu bleiben?",
   "home.hero.title": "Training starten",
   "home.hero.subtitle": "Tägliche Routine • 20 Min",
