--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,6 +7,9 @@
   "home.title": "Fit4Seniors",
   "home.description": "Fit4Seniors start screen.",
   "home.greeting": "Good morning{{name}}",
+  "home.greeting.morning": "Good morning{{name}}",
+  "home.greeting.afternoon": "Good afternoon{{name}}",
+  "home.greeting.evening": "Good evening{{name}}",
   "home.subtext": "Ready to stay active today?",
   "home.hero.title": "Start exercise",
   "home.hero.subtitle": "Daily routine • 20 min",
