Afgerond - Opschonen hardcoded and i18n files

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -377,6 +377,15 @@
   "trainieren.detail.completed": "Geschafft!",
   "trainieren.detail.completedCta": "Zurück zur Übersicht",
   "trainieren.detail.infoLabel": "Informationen anzeigen",
+  "trainierenHub.title": "Ihr Training. Klar strukturiert. Für den Alltag gemacht.",
+  "trainierenHub.intro.p1": "Wählen Sie das Trainingsmodul, das zu Ihnen passt, und entdecken Sie gezielte Einheiten aus unserem strukturierten Trainingskatalog. Diese App unterstützt Sie dabei, aktiv, beweglich und geistig fit zu bleiben – ohne Überforderung, ohne Zeitdruck.",
+  "trainierenHub.bullets.cardio": "Cardio stärkt Ihre Ausdauer und bringt Sie sanft in Bewegung – ideal für Herz, Kreislauf und tägliche Energie.",
+  "trainierenHub.bullets.strength": "Muskelaufbau hilft beim Erhalt und Aufbau von Kraft mit sicheren, alltagstauglichen Übungen.",
+  "trainierenHub.bullets.balance": "Balance & Flexibilität verbessert Stabilität, Beweglichkeit und Körpergefühl – für mehr Sicherheit im Alltag.",
+  "trainierenHub.bullets.brain": "Gehirntraining hält den Kopf wach – mit kurzen Aufgaben und kleinen Denkpausen für Konzentration und Klarheit.",
+  "trainierenHub.intro.p2": "Ziel dieser PWA ist es, Ihnen ein einfaches, verlässliches Trainingsangebot zu bieten, das sich an Ihr Tempo anpasst und langfristig zu mehr Lebensqualität beiträgt.",
+  "trainierenHub.toggle.more": "Mehr anzeigen",
+  "trainierenHub.toggle.less": "Weniger anzeigen",
   "completion.title": "Gut gemacht!",
   "completion.subtitle": "Jede Bewegung zählt – du machst das super.",
   "completion.cardTitle": "Training abgeschlossen!",
