--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -381,6 +381,15 @@
   "trainieren.detail.confirm.continue": "Continue training",
   "trainieren.detail.confirm.stop": "End training",
   "trainieren.detail.infoLabel": "Show information",
+  "trainierenHub.title": "Your Training. Clearly Structured. Built for Everyday Life.",
+  "trainierenHub.intro.p1": "Choose the module that fits you and explore focused sessions from our structured training catalog. This app is designed to help you stay active, mobile, and mentally sharp — without pressure or complexity.",
+  "trainierenHub.bullets.cardio": "Cardio supports endurance and gentle movement to boost heart health and daily energy.",
+  "trainierenHub.bullets.strength": "Strength training helps maintain and build muscle using safe, practical exercises.",
+  "trainierenHub.bullets.balance": "Balance & flexibility improves stability, mobility, and body awareness for everyday confidence.",
+  "trainierenHub.bullets.brain": "Brain training keeps the mind sharp — with short tasks and small thinking breaks for focus and clarity.",
+  "trainierenHub.intro.p2": "The goal of this PWA is to provide a simple, reliable training companion that adapts to your pace and supports long-term quality of life.",
+  "trainierenHub.toggle.more": "Read more",
+  "trainierenHub.toggle.less": "Show less",
   "completion.title": "Great job!",
   "completion.subtitle": "Every move counts — you're doing great.",
   "completion.cardTitle": "Training completed!",
