Afgerond - Detail pagina volledig gestyled zoals gewenst

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -377,6 +377,10 @@
   "trainieren.detail.completed": "Geschafft!",
   "trainieren.detail.completedCta": "Zurück zur Übersicht",
   "trainieren.detail.infoLabel": "Informationen anzeigen",
+  "trainDetail.physical.intro.cardio": "Heute machen wir eine ruhige Cardio-Einheit, die den Kreislauf sanft aktiviert und Sie in einen gleichmäßigen Rhythmus bringt.",
+  "trainDetail.physical.intro.strength": "Heute stärken wir Ihre Muskulatur mit einer sicheren, kontrollierten Übung – für mehr Stabilität und Kraft im Alltag.",
+  "trainDetail.physical.intro.balance": "Heute trainieren wir Balance und Beweglichkeit mit einer ruhigen Übung, die Ihnen mehr Sicherheit und Körpergefühl gibt.",
+  "trainDetail.physical.infoHint": "Tippen Sie auf das Info-Symbol rechts für eine ausführliche Erklärung (inklusive Video) zu dieser Übung.",
   "trainierenHub.title": "Ihr Training. Klar strukturiert. Für den Alltag gemacht.",
   "trainierenHub.intro.p1": "Wählen Sie das Trainingsmodul, das zu Ihnen passt, und entdecken Sie gezielte Einheiten aus unserem strukturierten Trainingskatalog. Diese App unterstützt Sie dabei, aktiv, beweglich und geistig fit zu bleiben – ohne Überforderung, ohne Zeitdruck.",
   "trainierenHub.bullets.cardio": "Cardio stärkt Ihre Ausdauer und bringt Sie sanft in Bewegung – ideal für Herz, Kreislauf und tägliche Energie.",
