--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -381,6 +381,10 @@
   "trainieren.detail.confirm.continue": "Continue training",
   "trainieren.detail.confirm.stop": "End training",
   "trainieren.detail.infoLabel": "Show information",
+  "trainDetail.physical.intro.cardio": "Today you’ll do a calm cardio session that gently activates circulation and helps you find a steady, comfortable rhythm.",
+  "trainDetail.physical.intro.strength": "Today you’ll build strength with a safe, controlled exercise — supporting stability and everyday confidence.",
+  "trainDetail.physical.intro.balance": "Today you’ll train balance and flexibility with a calm exercise that supports stability and body awareness.",
+  "trainDetail.physical.infoHint": "Tap the info icon on the right for a detailed explanation (including video) for this exercise.",
   "trainierenHub.title": "Your Training. Clearly Structured. Built for Everyday Life.",
   "trainierenHub.intro.p1": "Choose the module that fits you and explore focused sessions from our structured training catalog. This app is designed to help you stay active, mobile, and mentally sharp — without pressure or complexity.",
   "trainierenHub.bullets.cardio": "Cardio supports endurance and gentle movement to boost heart health and daily energy.",
@@ -433,7 +437,6 @@
   "training.steps.intense.2": "Gradually pick up the pace.",
   "training.steps.intense.3": "Engage your arms and stay stable.",
   "training.steps.intense.4": "Slow the pace toward the end.",
-  "home.widgets.ariaLabel": "Home widgets",
   "home.widgets.ariaLabel": "Home widgets",
   "progress.title": "Progress",
   "progress.subtitle": "Great job, you're staying consistent.",
