Hakf afgerond - Een poging om overal de spacing bij de titels gelijk te krijgen. Wordt vervolgd

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -31,6 +31,9 @@
   "notifications.description": "Hier werden in die zukunft Benachrichtigungen und Meldungen angezeigt.",
   "notifications.notesSettingsSaved": "Einstellungen für Notizen wurden gespeichert.",
   "notifications.back": "Zurück",
+  "pageTitles.progress": "Fortschritt",
+  "pageTitles.more": "Mehr",
+  "pageTitles.settings": "Einstellungen",
   "reminders.title": "Erinnerungen",
   "reminders.intro": "Stelle Erinnerungen ein, damit deine Routine klappt. Feste Zeiten helfen, aktiv zu bleiben.",
   "reminders.sections.time.title": "Zeitpunkte",
