--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,6 +31,9 @@
   "notifications.description": "Here notifications and alerts will be shown in the future.",
   "notifications.notesSettingsSaved": "Note settings have been saved.",
   "notifications.back": "Back",
+  "pageTitles.progress": "Progress",
+  "pageTitles.more": "More",
+  "pageTitles.settings": "Settings",
   "reminders.title": "Reminders",
   "reminders.intro": "Set reminders to keep your routine on track. A fixed moment makes it easier to stay active.",
   "reminders.sections.time.title": "Times",
