Afgerond - Added titel to Reminders page and header icons to settings page

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -34,6 +34,7 @@
   "pageTitles.progress": "Fortschritt",
   "pageTitles.more": "Mehr",
   "pageTitles.settings": "Einstellungen",
+  "pageTitles.reminders": "Erinnerungen",
   "reminders.title": "Erinnerungen",
   "reminders.intro": "Stelle Erinnerungen ein, damit deine Routine klappt. Feste Zeiten helfen, aktiv zu bleiben.",
   "reminders.sections.time.title": "Zeitpunkte",
