--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -34,6 +34,7 @@
   "pageTitles.progress": "Progress",
   "pageTitles.more": "More",
   "pageTitles.settings": "Settings",
+  "pageTitles.reminders": "Reminders",
   "reminders.title": "Reminders",
   "reminders.intro": "Set reminders to keep your routine on track. A fixed moment makes it easier to stay active.",
   "reminders.sections.time.title": "Times",
