Afgerond - Categorie pagina aangepast voor constante layout en extra text

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -351,6 +351,10 @@
   "trainieren.module.loading": "Modul wird geladen...",
   "trainieren.module.notFound": "Das Modul wurde nicht gefunden.",
   "trainieren.module.filtersTitle": "Intensität auswählen",
+  "trainieren.categories.cardio.intro": "Cardio stärkt Ihr Herz-Kreislauf-System und bringt mehr Energie in den Alltag. Diese Einheiten sind gelenkschonend, leicht verständlich und für zu Hause geeignet – ideal, um Schritt für Schritt Ausdauer aufzubauen, ohne sich zu überfordern.",
+  "trainieren.categories.strength.intro": "Kraft erhalten heißt selbstständig bleiben. Diese Übungen unterstützen Muskeln und Stabilität mit ruhigen, kontrollierten Bewegungen – ohne Geräte oder mit einfachen Alltagsgegenständen. Perfekt, um den Körper im Alltag belastbarer zu machen.",
+  "trainieren.categories.balance.intro": "Gute Balance und Beweglichkeit geben Sicherheit – beim Gehen, Drehen und Aufstehen. Hier trainieren Sie Stabilität, Koordination und sanfte Dehnung. Die Übungen sind bewusst langsam aufgebaut, damit Sie sich sicher fühlen und Fortschritte merken.",
+  "trainieren.categories.brain.intro": "Gehirntraining hält den Kopf wach und fördert Konzentration, Reaktion und Merkfähigkeit. Kurze, klare Aufgaben helfen, mental aktiv zu bleiben – ohne Stress. Sie trainieren in Ihrem Tempo und sehen Ihre Fortschritte Schritt für Schritt.",
   "trainieren.filters.title": "Filter",
   "trainieren.filters.intensityLabel": "Wie intensiv",
   "trainieren.filters.durationLabel": "Wie lang",
