--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -351,6 +351,10 @@
   "trainieren.module.loading": "Loading module...",
   "trainieren.module.notFound": "The module could not be found.",
   "trainieren.module.filtersTitle": "Choose an intensity",
+  "trainieren.categories.cardio.intro": "Cardio supports your heart and circulation and brings more energy to everyday life. These sessions are joint-friendly, easy to follow, and suitable for home – ideal for building endurance step by step without overdoing it.",
+  "trainieren.categories.strength.intro": "Maintaining strength helps you stay independent. These exercises support muscles and stability with calm, controlled movements – without equipment or with simple everyday items. A practical way to feel stronger and more capable in daily activities.",
+  "trainieren.categories.balance.intro": "Better balance and flexibility increase confidence when walking, turning, and standing up. These sessions train stability, coordination, and gentle mobility. The pace is deliberately calm so you can feel safe and notice steady progress.",
+  "trainieren.categories.brain.intro": "Brain training keeps your mind active and supports focus, reaction, and memory. Short, clear tasks help you stay mentally sharp without pressure. You train at your own pace and track progress step by step.",
   "trainieren.filters.title": "Filters",
   "trainieren.filters.intensityLabel": "How intense",
   "trainieren.filters.durationLabel": "How long",
