Afgerond - FASE 0 — Contract & Opschoning (semantische helderheid)

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -137,8 +137,8 @@
   "settings.overview.items.accessibility.title": "Textgröße & Kontrast",
   "settings.overview.items.accessibility.subtitle": "Lesbarkeit anpassen",
   "settings.overview.items.sound.title": "Ton & Feedback",
-  "settings.overview.items.sound.subtitle": "Sprachführung und Signaltöne",
-  "settings.overview.items.sound.value": "Ton: {{sound}} · Feedback: {{haptics}}",
+  "settings.overview.items.sound.subtitle": "Sprachhinweise und Signaltöne",
+  "settings.overview.items.sound.value": "Ton: {{sound}} · Vibration: {{haptics}} · Lautstärke: {{volume}}",
   "settings.overview.items.notifications.title": "Benachrichtigungen",
   "settings.overview.items.notifications.subtitle": "Erinnerungen verwalten",
   "settings.overview.items.language.title": "Sprache",
@@ -152,7 +152,7 @@
   "settings.values.contrast.off": "Aus",
   "settings.values.sound.on": "Ein",
   "settings.values.sound.off": "Aus",
-  "settings.values.haptics.on": "Ein",
+  "settings.values.haptics.on": "An",
   "settings.values.haptics.off": "Aus",
   "settings.values.language.de": "Deutsch",
   "settings.values.language.en": "English",
@@ -168,15 +168,15 @@
   "settings.bottomToast.text.contrast.standard.body": "Ausgewogene Farben",
   "settings.bottomToast.text.contrast.high.title": "Hoher Kontrast",
   "settings.bottomToast.text.contrast.high.body": "Mehr Lesbarkeit",
-  "settings.bottomToast.sound.eyebrow": "Ton",
   "settings.bottomToast.sound.title": "Ton & Feedback",
   "settings.bottomToast.sound.section.volume": "Lautstärke",
-  "settings.bottomToast.sound.volumeHint": "Gilt für Sprachhinweise und Signale.",
+  "settings.bottomToast.sound.volumeHint": "Gilt für Hinweise und Signale.",
   "settings.bottomToast.sound.section.toggles": "Optionen",
   "settings.bottomToast.sound.sound.title": "Ton",
-  "settings.bottomToast.sound.sound.body": "Sprachhinweise und Signale",
-  "settings.bottomToast.sound.haptics.title": "Haptik",
-  "settings.bottomToast.sound.haptics.body": "Vibration als Feedback",
+  "settings.bottomToast.sound.sound.body": "Sprachhinweise & Signale aktivieren",
+  "settings.bottomToast.sound.haptics.title": "Vibration",
+  "settings.bottomToast.sound.haptics.body": "Kurzes Vibrations-Feedback",
+  "settings.bottomToast.sound.test": "Test",
   "settings.bottomToast.language.eyebrow": "Sprache",
   "settings.bottomToast.language.title": "Sprache",
   "settings.bottomToast.language.section.title": "Sprache wählen",
@@ -200,9 +200,6 @@
   "settings.detail.accessibility.callout.title": "Schwer zu lesen?",
   "settings.detail.accessibility.callout.body": "Sie können auch Kontrast oder Screenreader in den Geräteeinstellungen aktivieren.",
   "settings.detail.accessibility.callout.cta": "Mehr Tipps",
-  "settings.detail.sound.title": "Ton & Feedback",
-  "settings.detail.sound.body": "Audiohinweise werden in den Trainings gesteuert. Öffnen Sie die Trainingsübersicht, um Signale anzupassen.",
-  "settings.detail.sound.cta": "Trainingsübersicht öffnen",
   "settings.detail.profile.title": "Profil",
   "settings.detail.profile.body": "Verwalten Sie Ihre persönlichen Daten und Privatsphäre im Profilbereich.",
   "settings.detail.profile.cta": "Profil öffnen",
@@ -547,8 +544,8 @@
   "profile.stats.trainings": "Trainings",
   "profile.stats.minutes": "Minuten",
   "profile.stats.weeks": "Wochen",
-  "profile.goal.title": "Bewegungsziele",
-  "profile.goal.summary": "{{count}}x pro Woche • {{minutes}} Min",
+  "profile.goal.title": "Bewegungsziel",
+  "profile.goal.hint": "Beeinflusst, welches Ziel in Ihrem Profil angezeigt wird.",
   "profile.goal.condition": "Ausdauer verbessern",
   "profile.goal.strength": "Kraft aufbauen",
   "profile.goal.balance": "Balance & Stabilität",
@@ -558,51 +555,27 @@
   "profile.focus.endurance": "Ausdauer & Cardio",
   "profile.focus.mobility": "Mobilität & Flexibilität",
   "profile.focus.overall": "Ganzheitliche Fitness",
-  "profile.health.title": "Gesundheit",
-  "profile.health.heartBp": "Herzfrequenz & Blutdruck",
-  "profile.health.mobility": "Mobilität & Gelenke",
-  "profile.health.vitals": "Vitalwerte & Wohlbefinden",
-  "profile.accessibility.title": "Barrierefreiheit",
-  "profile.accessibility.largeText": "Größere Schrift",
-  "profile.accessibility.highContrast": "Hoher Kontrast",
-  "profile.accessibility.reduceMotion": "Bewegungen reduzieren",
-  "profile.accessibility.none": "Standard-Einstellungen",
+  "profile.focus.hint": "Beeinflusst, welchen Fokus wir im Profil hervorheben.",
+  "profile.level.title": "Niveau",
+  "profile.level.hint": "Beeinflusst, welches Niveau neben Ihren Profilinfos steht.",
   "profile.actions.edit": "Profil bearbeiten",
   "profile.actions.save": "Speichern",
   "profile.actions.cancel": "Abbrechen",
   "profile.version": "Fit4Senioren Version 2.1.0",
   "profile.displayName.placeholder": "Ihr Name",
   "profile.edit.title": "Profil bearbeiten",
-  "profile.edit.subtitle": "Passen Sie Ihr Profil für ein persönliches Erlebnis an.",
+  "profile.edit.subtitle": "Nur das festhalten, was Ihr Profil wirklich beeinflusst.",
   "profile.edit.name.title": "Name",
   "profile.edit.name.subtitle": "Für persönliche Anrede",
   "profile.edit.name.label": "Anzeigename",
-  "profile.edit.age.title": "Altersgruppe",
-  "profile.edit.age.subtitle": "Für passende Übungen",
   "profile.edit.goal.title": "Bewegungsziel",
-  "profile.edit.goal.subtitle": "Was möchten Sie erreichen?",
+  "profile.edit.goal.subtitle": "Beeinflusst das Ziel, das im Profil angezeigt wird.",
   "profile.edit.level.title": "Niveau",
-  "profile.edit.level.subtitle": "Aktuelle Fitness",
-  "profile.edit.gender.title": "Geschlecht",
-  "profile.edit.gender.subtitle": "Für persönliche Anrede",
+  "profile.edit.level.subtitle": "Aktuelles Niveau (nicht bearbeitbar)",
+  "profile.edit.level.hint": "Beeinflusst die Niveaodarstellung im Profil.",
   "profile.edit.focus.title": "Präferenz",
-  "profile.edit.focus.subtitle": "Worauf möchten Sie sich fokussieren?",
-  "profile.edit.health.title": "Gesundheit",
-  "profile.edit.health.subtitle": "Was soll im Blick bleiben?",
-  "profile.edit.accessibility.title": "Barrierefreiheit",
-  "profile.edit.accessibility.subtitle": "Nur lokale Präferenzen (keine globalen Themenwechsel)",
-  "profile.edit.accessibility.largeTextHint": "Schrift lokal vergrößern, falls möglich",
-  "profile.edit.accessibility.highContrastHint": "Stärkeren Kontrast nutzen, wenn verfügbar",
-  "profile.edit.accessibility.reduceMotionHint": "Animationen möglichst reduzieren",
-  "profile.age.50_55": "50 - 55 Jahre",
-  "profile.age.55_60": "55 - 60 Jahre",
-  "profile.age.60_65": "60 - 65 Jahre",
-  "profile.age.65_70": "65 - 70 Jahre",
-  "profile.age.70_75": "70 - 75 Jahre",
-  "profile.age.75_plus": "75+ Jahre",
+  "profile.edit.focus.subtitle": "Beeinflusst den Fokus, den wir im Profil zeigen.",
   "profile.level.starter": "Einsteiger (ruhig)",
   "profile.level.intermediate": "Mittel (aktiv)",
-  "profile.level.advanced": "Fortgeschritten (sportlich)",
-  "profile.gender.male": "Männlich",
-  "profile.gender.female": "Weiblich"
+  "profile.level.advanced": "Fortgeschritten (sportlich)"
 }
