--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -138,7 +138,7 @@
   "settings.overview.items.accessibility.subtitle": "Adjust readability",
   "settings.overview.items.sound.title": "Sound & feedback",
   "settings.overview.items.sound.subtitle": "Voice guidance and cues",
-  "settings.overview.items.sound.value": "Sound: {{sound}} · Feedback: {{haptics}}",
+  "settings.overview.items.sound.value": "Sound: {{sound}} · Vibration: {{haptics}} · Volume: {{volume}}",
   "settings.overview.items.notifications.title": "Notifications",
   "settings.overview.items.notifications.subtitle": "Manage reminders",
   "settings.overview.items.language.title": "Language",
@@ -168,15 +168,15 @@
   "settings.bottomToast.text.contrast.standard.body": "Balanced colors",
   "settings.bottomToast.text.contrast.high.title": "High contrast",
   "settings.bottomToast.text.contrast.high.body": "Extra legibility",
-  "settings.bottomToast.sound.eyebrow": "Audio",
   "settings.bottomToast.sound.title": "Sound & feedback",
   "settings.bottomToast.sound.section.volume": "Volume",
   "settings.bottomToast.sound.volumeHint": "Applies to guidance and cues.",
   "settings.bottomToast.sound.section.toggles": "Options",
   "settings.bottomToast.sound.sound.title": "Sound",
   "settings.bottomToast.sound.sound.body": "Enable voice & cues",
-  "settings.bottomToast.sound.haptics.title": "Haptics",
-  "settings.bottomToast.sound.haptics.body": "Vibration feedback",
+  "settings.bottomToast.sound.haptics.title": "Vibration",
+  "settings.bottomToast.sound.haptics.body": "Short vibration feedback",
+  "settings.bottomToast.sound.test": "Test",
   "settings.bottomToast.language.eyebrow": "Language",
   "settings.bottomToast.language.title": "Language",
   "settings.bottomToast.language.section.title": "Choose language",
@@ -200,9 +200,6 @@
   "settings.detail.accessibility.callout.title": "Hard to read?",
   "settings.detail.accessibility.callout.body": "You can also enable high contrast or screen reader options on your device.",
   "settings.detail.accessibility.callout.cta": "More tips",
-  "settings.detail.sound.title": "Sound & feedback",
-  "settings.detail.sound.body": "Audio guidance is managed inside training sessions. Open the training overview to adjust cues.",
-  "settings.detail.sound.cta": "Open training overview",
   "settings.detail.profile.title": "Profile",
   "settings.detail.profile.body": "Update your personal data and privacy preferences from the profile section.",
   "settings.detail.profile.cta": "Open profile",
@@ -547,8 +544,8 @@
   "profile.stats.trainings": "Sessions",
   "profile.stats.minutes": "Minutes",
   "profile.stats.weeks": "Weeks",
-  "profile.goal.title": "Movement goals",
-  "profile.goal.summary": "{{count}}x per week • {{minutes}} min",
+  "profile.goal.title": "Movement goal",
+  "profile.goal.hint": "This influences the goal shown on your profile cards.",
   "profile.goal.condition": "Improve endurance",
   "profile.goal.strength": "Build strength",
   "profile.goal.balance": "Balance & stability",
@@ -558,52 +555,28 @@
   "profile.focus.endurance": "Endurance & cardio",
   "profile.focus.mobility": "Mobility & flexibility",
   "profile.focus.overall": "Overall fitness",
-  "profile.health.title": "Health",
-  "profile.health.heartBp": "Heart rate & blood pressure",
-  "profile.health.mobility": "Mobility & joints",
-  "profile.health.vitals": "Vitals & wellbeing",
-  "profile.accessibility.title": "Accessibility",
-  "profile.accessibility.largeText": "Larger text",
-  "profile.accessibility.highContrast": "High contrast",
-  "profile.accessibility.reduceMotion": "Reduce motion",
-  "profile.accessibility.none": "Standard settings",
+  "profile.focus.hint": "This influences which focus we highlight in your profile.",
+  "profile.level.title": "Level",
+  "profile.level.hint": "This influences the level shown next to your member info.",
   "profile.actions.edit": "Edit profile",
   "profile.actions.save": "Save",
   "profile.actions.cancel": "Cancel",
   "profile.version": "Fit4Seniors Version 2.1.0",
   "profile.displayName.placeholder": "Your name",
   "profile.edit.title": "Edit profile",
-  "profile.edit.subtitle": "Adjust your profile for a personal experience that fits your goals.",
+  "profile.edit.subtitle": "Keep only the essentials that affect your profile.",
   "profile.edit.name.title": "Name",
   "profile.edit.name.subtitle": "For personal greeting",
   "profile.edit.name.label": "Display name",
-  "profile.edit.age.title": "Age group",
-  "profile.edit.age.subtitle": "To tailor exercises",
   "profile.edit.goal.title": "Movement goal",
-  "profile.edit.goal.subtitle": "What do you want to achieve?",
+  "profile.edit.goal.subtitle": "This influences the goal shown on your profile overview.",
   "profile.edit.level.title": "Level",
-  "profile.edit.level.subtitle": "Current fitness",
-  "profile.edit.gender.title": "Gender",
-  "profile.edit.gender.subtitle": "For personal salutation",
+  "profile.edit.level.subtitle": "Current level (read-only)",
+  "profile.edit.level.hint": "This influences the level label shown on your profile.",
   "profile.edit.focus.title": "Preference",
-  "profile.edit.focus.subtitle": "Choose your focus",
-  "profile.edit.health.title": "Health",
-  "profile.edit.health.subtitle": "What to keep an eye on",
-  "profile.edit.accessibility.title": "Accessibility",
-  "profile.edit.accessibility.subtitle": "Local preferences only (no global theme changes)",
-  "profile.edit.accessibility.largeTextHint": "Increase text size where supported",
-  "profile.edit.accessibility.highContrastHint": "Use stronger contrast where available",
-  "profile.edit.accessibility.reduceMotionHint": "Reduce animations when possible",
-  "profile.age.50_55": "50 - 55 years",
-  "profile.age.55_60": "55 - 60 years",
-  "profile.age.60_65": "60 - 65 years",
-  "profile.age.65_70": "65 - 70 years",
-  "profile.age.70_75": "70 - 75 years",
-  "profile.age.75_plus": "75+ years",
+  "profile.edit.focus.subtitle": "This influences the focus shown on your overview.",
   "profile.level.starter": "Starter (Easy)",
   "profile.level.intermediate": "Intermediate (Active)",
-  "profile.level.advanced": "Advanced (Sporty)",
-  "profile.gender.male": "Male",
-  "profile.gender.female": "Female"
+  "profile.level.advanced": "Advanced (Sporty)"
 }
 
